--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <a class="nav-link" target="_blank" href="https://joserosas97.github.io/Portafolio/">Portafolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/josé-rosas-montoya-37b089160/">Linkedln</a>
+          <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/josé-rosas-montoya-37b089160/"><i class="fa-brands fa-linkedin"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" target="_blank" href="https://github.com/joserosas97">Github</a>
+          <a class="nav-link" target="_blank" href="https://github.com/joserosas97"><i class="fa-brands fa-github"></i></a>
         </li>
       </ul>
     </div>
@@ -36,7 +36,8 @@
   <div class="resumen">
     <div class="resumen-heading">
       <h1 class="display-4">José Rosas Montoya</h1>
-      <p class="lead">Web Developer</p>
+      <p>Tecnico superior en Telecomunicaciones, conectividad y redes, con amplio conocimientos en lo que es el networking, siempre en constante actualizacion de nuevas tecnologias, actualmente me encuentro cursando un bootcamp en desafio latam para poder complementar mi carrera de networking y asi poder enfocarme lo que es la ciberseguridad.
+      </p>
     </div>
     <div class="resumen-body">
       <div class="resumen-section">
@@ -76,6 +77,7 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://kit.fontawesome.com/a2afb74419.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
