--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <li class="nav-item">
           <a class="nav-link" target="_blank" href="https://github.com/joserosas97"><i class="fa-brands fa-github"></i></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" target="_blank" href="mailto:rosasmontoya.jose@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+        </li>
       </ul>
     </div>
   </div>
